crates/rumps-query/snapshots/scripts__194_wrappable_chainable_smoke.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  ; Fallible: unwrap and coalesce\n  write Option.Some(42)!\n  write Option.None ?? \"fallback\"\n\n  ; Wrappable: wrap\n  write ?99\n  let w = Wrappable[Option[Int]]:wrap\n  write w(7)\n\n  ; Chainable: chain\n  write Chainable:chain(Option.Some(10), x => ?x)\n\n  ; Generic with Chainable (implies Wrappable + Fallible)\n  let id = [T, F: Chainable](x: F[T]) -> T => x!\n  write id(Option.Some(1))\n}\n"
---
42
"fallback"
Option.Some(99)
Option.Some(7)
Option.Some(10)
1
