crates/rumps-query/snapshots/scripts__195_user_hkt_unwrappable.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Single-param user Unwrappable\n;\n; Tests `!` and explicit `Unwrappable:unwrap` dispatch\n; on a user-defined `Box[T]` type.\n\nvariant Box[T] = Full(T) | Empty\n\nclass Wrappable for Box {\n  fun wrap(x: T) -> Box[T] {\n    Box.Full(x)\n  }\n}\n\nclass Unwrappable for Box {\n  fun unwrap(b: Box[T]) -> T {\n    match b {\n      Box.Full(x) => { x }\n      Box.Empty => { raise \"empty box\" }\n    }\n  }\n}\n\nfun main() {\n  let b = Box.Full(42)\n  write b!\n  write Unwrappable:unwrap(b)\n}\n"
---
42
42
